raw/vault-core/5.9/api_overview.md
---
source_url: "https://vault-portal.thoughtmachine.net/vault-core/5-9/EN/api/overview"
title: "API overview"
scraped_at: "2026-06-17T05:00:32.570Z"
images: 0
---

# API overview

## [](#overview "Copy link to heading")Overview

There are various groups of APIs that provide key parts of Vault Core functionality. This section describes the general characteristics of these APIs.

### [](#api_types "Copy link to heading")API types

The Vault Core APIs consist of two types of APIs:

-   The Vault Core *REST APIs* use predictable and resource-oriented URLs with standard HTTP methods and status codes. Responses are in JSON format.
    
-   The *Streaming APIs* use Kafka to emit messages to a series of Kafka topics. These messages are events which reflect mutations of resources in Vault Core.
    
    chat\_bubble
    
    In the cases of the [Data Loader](/vault-core/5-9/EN/api/data_loader_api) and [Postings APIs](/vault-core/5-9/EN/api/postings_api), there are also Kafka request-response APIs.
    

The following table lists the APIs that are included in Vault Core and whether or not they have an associated Streaming API:

  
| API | REST API | Streaming API |
| --- | --- | --- |
| 
Core API

 | 

YES

 | 

YES

 |
| 

Audit API

 | 

YES

 | 

YES

 |
| 

Access Control API

 | 

YES

 | 

NO

 |
| 

Edge Functions API

 | 

YES

 | 

YES

 |
| 

Workflows API\[[1](#_footnotedef_1 "View footnote.")\]

 | 

YES

 | 

YES

 |
| 

Data Loader API

 | 

YES

 | 

YES

 |
| 

Experience Layer API\[[2](#_footnotedef_2 "View footnote.")\]

 | 

YES

 | 

YES

 |
| 

Postings API API\[[3](#_footnotedef_3 "View footnote.")\]

 | 

YES

 | 

YES

 |
| 

Payments Hub API

 | 

YES

 | 

YES

 |

chat\_bubble

The rest of this section describes the features that apply to all of the Vault Core REST APIs (unless otherwise specified). Refer to specific sections for each API to learn more about the Streaming API.

### [](#request_methods "Copy link to heading")Request methods

The following table lists the request methods supported by the API:

 
| Method | Description |
| --- | --- |
| 
GET

 | 

Retrieves data from a resource.

 |
| 

POST

 | 

Submits data to a resource.

 |
| 

PUT

 | 

Updates data of an existing resource.

 |
| 

DELETE

 | 

Deletes a resource.

 |

chat\_bubble

All API requests must be made over HTTPS. Requests made over HTTP will fail. Requests without authentication will also fail.

The base path refers to the common path for the API. For example:

### [](#request_parameters "Copy link to heading")Request parameters

You can use a range of request parameters to control what data is returned in an endpoint response.

 
| Parameter type | Description |
| --- | --- |
| 
Header

 | 

Parameters included in the request header, usually related to authorisation

 |
| 

Path

 | 

Parameters within the path of the endpoint, before the query string (`?`). These are usually enclosed in curly braces `{path parameter}`.The path parameter is often a URI for a resource. For example, `{product_id}`.These types of parameters are mainly used in PUT and GET requests.

 |
| 

Query string

 | 

Parameters in the query string of the endpoint, after the (`?`). This parameter can also be used to submit arrays. For example, to pass several `foo_ids` fields, use: \`/v1/endpoint?foo\_ids=1&foo\_ids=2&foo\_ids=3\`These types of parameters are mainly used in GET requests to list endpoints.

 |
| 

Request body

 | 

Parameters included in the request body. Usually submitted in JSON format.

 |

### [](#http_request "Copy link to heading")HTTP Request

#### [](#headers "Copy link to heading")Headers

The API uses the following request header:

-   The Authorization header includes the API key and session tokens.
    

Each request can optionally include:

-   An `X-On-Behalf-Of-Customer-ID` header containing the ID of the Vault Core customer that the service account is making the request for.
    
-   An `X-On-Behalf-Of-Employee-ID` header containing the ID of the bank employee that the service account is making the request for.
    
-   An `X-On-Behalf-Of-Employee-Email` header containing the email of the bank employee that the service account is making the request for.
    

These headers are used only by the Audit and Action Logs services. The values assigned to the headers will be in the corresponding logs generated by the request.

These headers will not change any of the functionality of the underlying API call. Requests will behave identically whether they are included or not.

#### [](#request_body "Copy link to heading")Request body

The request body for most GET, POST and PUT calls, must be in JSON format unless stated otherwise.

### [](#status_codes "Copy link to heading")Status codes

The API supports a number of different HTTP status codes to help you determine the success or otherwise of your request.

The API uses the following HTTP status codes:

  
| Code | Meaning | Notes |
| --- | --- | --- |
| 
200

 | 

Success

 | 

Successful request and response.

 |
| 

400

 | 

Bad Request

 | 

Invalid arguments in the request. Please review the request arguments and send again.

 |
| 

401

 | 

Unauthorized

 | 

The request could not be authenticated. Example: `No Authentication token provided`. Please provide a valid Authentication token.

 |
| 

403

 | 

Forbidden

 | 

The client does not have permission to perform the request.

 |
| 

404

 | 

Not Found

 | 

The requested resource could not be found.

 |
| 

405

 | 

Method Not Allowed

 | 

The requested resource exists, but was requested with an invalid method.

 |
| 

409

 | 

Conflict

 | 

The request could not be processed because of conflict in the current state of the resource; for example trying to create a resource when a matching one exists.

 |
| 

429

 | 

Too Many Requests

 | 

You are sending too many requests within a time period.

 |
| 

499

 | 

Operation Cancelled

 | 

The operation was cancelled (by the caller).

 |
| 

500

 | 

Internal Server Error

 | 

We had a problem with our server. Please try again later.

 |
| 

501

 | 

Not Implemented

 | 

The operation is not implemented, not supported, or not enabled.

 |
| 

503

 | 

Service Unavailable

 | 

We’re currently unavailable. Please try again later.

 |
| 

504

 | 

Request Timeout

 | 

The complete request was not received within the allowed time. You can safely retry.

 |

### [](#update_masks "Copy link to heading")Update masks

When you are updating resources, you must provide update masks for the fields being updated. If a field mask references a property of a nested object, the object must exist on the request but it can be empty.

For example, if an update mask contains the path `details.first_name`, `first_name` can be empty but the `details` object must not be empty.

### [](#omitted_by_default "Copy link to heading")Omitted by default

By default, fields marked as `omitted by default` will not be automatically populated because their content is either large in size or costly to compute. These fields may be populated by passing the query parameter `fields_to_include` with values from `IncludeField`.

## [](#authentication "Copy link to heading")Authentication

Vault Core API access control is achieved using one of two methods. Use only one method in each request:

-   JSON Web Tokens (JWTs) as bearer tokens (the recommended method)
    
-   Authentication Tokens (legacy method) using Service Account Tokens
    
    chat\_bubble
    
    Authentication Tokens will be deprecated as of release 4.3, and will be removed no earlier than release 7.0.
    

### [](#json_web_tokens "Copy link to heading")JSON Web Tokens

This section describes the usage of JWT tokens.

#### [](#getting_a_jwt "Copy link to heading")Getting a JWT

JWTs should be generated according to the best practice outlined in [JWT Generation Process](/vault-core/5-9/EN/vault_core_overview/vault_security#jwt_generation_process).

For the JWT to be accepted, the following JWT claims MUST be provided:

-   Issued at timestamp (`iat`) - the number of seconds since the Unix epoch, defining when the JWT was issued.
    
-   Expiry timestamp (`exp`) - the number of seconds since the Unix epoch, defining when the JWT expires.
    
-   Subject identifier (`sub`) - a unique identifier for the actor associated with the JWT.
    

The following claim *must* be provided if there is more than *one* issuer configured:

-   Issuer (`iss`) - a string that identifies the principal that issued the JWT.
    

The following claims are optional, but recommended:

-   Not before timestamp (`nbf`) - the number of seconds since the Unix epoch, defining when the JWT becomes valid.
    
-   Audience (`aud`) - an audience string value for the JWT to be verified against. Typically this is a URL, but it may be any string. `aud` limits the scope of where a JWT may be used. If set on the token, Vault Core validates this against the configured audience values.
    
    For more information, see [JWT Audience](/vault-core/5-9/EN/vault_core_overview/vault_security#jwt_audience).
    

In addition to these claims, the JWT should include any claims necessary for the [OPA Policy](/vault-core/5-9/EN/reference/policies/opa-policies#overview_opa) attached to the API gateway to authorise the request.

For example, Vault Core provides the following default Rego policy attached to the API:

For this policy to accept a request, the JWT needs to include either:

-   an `scp` claim - this is a JSON array
    
-   a `scope` claim - this is a JSON space-separated string
    

The policy requires that at least one of these claims contains an API scope that is associated with the API endpoint that is the destination of the request.

#### [](#managing_policies "Copy link to heading")Managing policies

You can create or update policies for each API by using the [Policy Management](/vault-core/5-9/EN/api/core_api#policy_management) endpoints of the Core API.

In order to bootstrap a new environment for the first time, you can define the initial policies in your `values.yaml` file. However, if you create or change a policy using the Core API Policy Management Service endpoints, the corresponding `values.yaml` settings are ignored and no longer effective for that API. Therefore, Thought Machine recommends that you do not change the values for certain policies via `values.yaml` once you have installed and configured Vault Core. Instead, use the [Policy Management](/vault-core/5-9/EN/api/core_api#policy_management) endpoints.

For information about how the policy schema IDs, `values.yaml` variables, and policy `package` names are associated with each other, see [Policy Schemas](/vault-core/5-9/EN/reference/policies/opa-policies#policy_schemas).

##### [](#policy_variables_in_values_yaml "Copy link to heading")Policy variables in values.yaml

You can customise the policy for each API by setting the following variables in the `values.yaml` file:

-   `access_control_api.default_permissions_policy`
    
-   `audit_api.default_permissions_policy`
    
-   `core_api.default_permissions_policy`
    
-   `data_loader_api.default_permissions_policy`
    
-   `experience_layer_api.default_permissions_policy`
    
-   `payment_hub_api.default_permissions_policy`
    

##### [](#policy_schema_ids_for_core_api_policy_management_endpoints "Copy link to heading")Policy schema IDs for Core API Policy Management endpoints

If you want to create, update, and manage policies using the Core API Policy Management Service, you must use the correct `policy_schema_id` value with the corresponding Policy Management endpoint.

The `policy_schema_id` values are:

-   `access_control_api_permissions`
    
-   `audit_api_permissions`
    
-   `core_api_permissions`
    
-   `data_loader_api_permissions`
    
-   `experience_layer_api_permissions`
    
-   `payment_hub_api_permissions`
    

error

Each policy schema contains a line near the top of the file that begins, `package…​`, followed by the corresponding policy schema ID for a given policy. For example, `package <value-id>`, where `<value-id>` is an ID such as `core_api_permissions`. Do not change this line because the API expects these names as given.

##### [](#example_of_a_decoded_jwt_header "Copy link to heading")Example of a decoded JWT header

This is a typical example of a decoded JWT header and claims file that conforms to the requirements outlined in this guidance:

#### [](#authenticating_requests "Copy link to heading")Authenticating requests

Once generated, a JWT should be attached to an API request using the `Authorization` header with the bearer scheme. That is:

### [](#authentication_tokens "Copy link to heading")Authentication Tokens

Thought Machine uses auth tokens to provide access to the API. Service accounts send their permanent auth tokens in the `X-Auth-Token` header.

#### [](#getting_your_token "Copy link to heading")Getting your token

You can create and manage your own service accounts and service account tokens using the *Operations Dashboard* or the Core API.

From the Operations Dashboard:

1.  Go to the *Operations Dashboard*.
    
2.  Go to **Organisation admin**.
    
3.  Go to **Service accounts**.
    
4.  Go to **Creating service accounts** and follow the instructions.
    

From the Core API:

Use the Auth endpoint in the Core API. For more information, see [Auth-ServiceAccount](/vault-core/5-9/EN/api/core_api#serviceaccount).

chat\_bubble

You must not share your API tokens in publicly-accessible areas such as GitHub and client-side code.

#### [](#authenticating_requests_2 "Copy link to heading")Authenticating requests

Include the permanent auth token in the `X-Auth-Token` header.

## [](#errors "Copy link to heading")Errors

The API uses an Error JSON object to return errors. The format of the JSON object is:

The following table describes the components used in the object:

 
| Component | Description |
| --- | --- |
| 
`message`

 | 

A human-readable message describing the error. (The wording of the messages may change between Vault Core releases.)

 |
| 

`code`

 | 

The Error Code of the error indicating the type of error that has occurred. See [Error Codes](#error__codes) below.

 |
| 

`details`

 | 

An array of payloads containing specific details of the error that occurred. (See [Error Details](#error__details) below.)The payload varies based on the provided code. See [API method documentation](/vault-core/5-9/EN/api/) for more information.

 |
| 

`vault_error_code`

 | 

A three-part (hex) code used to identify the type of error that occurred.

 |
| 

`tracing_id`

 | 

The Tracing ID of the request in which the error is raised.

 |

For the list of error codes and details any individual method can return, see the error response information in the documentation for that API method.

For API methods that support error details, the following information is provided:

-   All possible returned codes for the method.
    
-   All possible returned details for the method.
    
    -   For code `FAILED_PRECONDITION` , all possible `violation_type`s and `metadata` fields are included.
        
    

chat\_bubble

Some API methods do not yet support error details. These are indicated by omitted error response information in the documentation for those methods.

### [](#error_codes "Copy link to heading")Error Codes

The following table describes the error codes that can be generated.

   
| Code | HTTP Status Code | Possible to Retry | Description |
| --- | --- | --- | --- |
| 
`ABORTED`

 | 

409

 | 

Yes

 | 

The operation was aborted, typically due to concurrency issues.

 |
| 

`ALREADY_EXISTS`

 | 

409

 | 

No

 | 

Returned when an attempt to create a resource failed because a matching resource already exists.

 |
| 

`CANCELLED`

 | 

499

 | 

Yes

 | 

The operation was cancelled (by the caller).

 |
| 

`DATA_LOSS`

 | 

500

 | 

No

 | 

The operation has experienced unrecoverable data loss or corruption

 |
| 

`DEADLINE_EXCEEDED`

 | 

504

 | 

Yes

 | 

The complete request was not received within the allowed time. May be returned even if the operation has completed successfully.

 |
| 

`FAILED_PRECONDITION`

 | 

400

 | 

No

 | 

The operation was rejected because the system is not in a state required for the operation’s execution.

 |
| 

`INTERNAL`

 | 

500

 | 

No

 | 

A problem has occurred on the server.

 |
| 

`INVALID_ARGUMENT`

 | 

400

 | 

No

 | 

The request contained invalid arguments.

 |
| 

`NOT_FOUND`

 | 

404

 | 

No

 | 

The requested resource was not found.

 |
| 

`OUT_OF_RANGE`

 | 

400

 | 

No

 | 

The operation was attempted past the valid range.

 |
| 

`PERMISSION_DENIED`

 | 

403

 | 

No

 | 

The client does not have permission to perform the request.

 |
| 

`RESOURCE_EXHAUSTED`

 | 

429

 | 

Yes

 | 

Returned when too many requests are sent within a time period.

 |
| 

`UNAUTHENTICATED`

 | 

401

 | 

No

 | 

The request could not be authenticated.

 |
| 

`UNAVAILABLE`

 | 

503

 | 

Yes

 | 

The service is currently unavailable.

 |
| 

`UNIMPLEMENTED`

 | 

405, 501

 | 

No

 | 

The operation is not implemented, not supported or not enabled.

 |
| 

`UNKNOWN`

 | 

500

 | 

No

 | 

An unknown problem has occurred on the server.

 |

### [](#error_details "Copy link to heading")Error Details

Errors have a `details` field which may include specific information about the error that occurred.

For more information please see the error response documentation for the relevant API Method.

The following error details are supported in the `details` field, multiple can be returned at the same time:

-   `NOT_FOUND`
    
-   `ALREADY_EXISTS`
    

#### [](#bad_request "Copy link to heading")Bad Request

`BadRequest` describes the violations in the clients request often due to invalid or missing field values.

Commonly used for errors with the following codes:

-   `INVALID_ARGUMENT`
    

Indicated by `@type`

A `BadRequest` includes one or more `field_violations`.

A violation’s `violation_type` indicates the type of validation error is generic across all APIs. These include but are not limited to `INVALID_FORMAT`, `INVALID_VALUE`, `REQUIRED_FIELD`, `DUPLICATE_FORMAT`.

The field that caused the violation is specified using its JSON path name in the `field` field.

In addition each violation includes a `description` field which contains a human-readable message describing the error. Wording of descriptions may change between Vault Core releases.

#### [](#invalid_code "Copy link to heading")Invalid Code

`InvalidCode` describes violations from source code in the client request, due to syntax errors or operations that are disallowed by the execution environment that the code will run within.

Commonly used for errors with the following codes:

-   `INVALID_ARGUMENT`
    

Indicated by `@type`

An `InvalidCode` detail includes one or more `violations`. Each of which can contain:

-   `violation_type` - indicating the broad category of error. It is limited to a discrete set offending values that includes, but is not limited to: `DisallowedError`, `DefinitionError`, `SyntaxError`.
    
-   `code` - a snippet of the offending code which may or may not be present.
    
-   `description` - a human readable description, explaining the nature of the violation.
    
-   `lineno`, `offset`, `end_lineno`, and `end_offset` - zero or more of these may be present to indicate the location within the source code where the violation occurred, if the location is known and applicable.
    

#### [](#precondition_failure "Copy link to heading")Precondition failure

`PreconditionFailure` describes what preconditions have failed; a precondition is defined as:

A condition or predicate that must always be true just prior to the execution of some section of code or before an operation in a formal specification.

Commonly used for errors with the following codes:

-   `FAILED_PRECONDITION`
    

Indicated by `@type`

A `PreconditionFailure` includes one or more `violations`. A violation’s `violation_type` indicates what precondition was violated and is defined for each API Method. In addition each violation can also include `metadata` which may include further information, such as resource state, to help identify the issue.

Please see Method specific documentation for violation types, what causes them and the available metadata.

#### [](#resource_information "Copy link to heading")Resource information

`ResourceInfo` describes what resources produced the error when processing the request

Commonly used for errors with the following codes:

-   `NOT_FOUND`
    
-   `ALREADY_EXISTS`
    

Indicated by `@type`

A `ResourceInfo` includes an array of `resource_ids`. For example, if multiple resources were not found during a `BatchGet` request the missing resource ids would be included in this field.

## [](#idempotency "Copy link to heading")Idempotency

All actions which modify states in Vault Core’s APIs are *idempotent*. This means they are safe to retry and will produce exactly the same result despite having been requested before. Idempotency enables solutions to be built which are resilient to network and infrastructure problems, providing a better experience for the user.

Some requests cannot determine whether you meant to make two identical calls or to retry a single call (for example upon making a transfer or payment). You can indicate this using the `request_id` field which is present in all state-modifying requests.

The value of this field must be unique for all distinct calls to the API. For this reason we suggest using something like UUIDv4 to ensure uniqueness.

When you want to:

-   Retry the same request, use the same `request_id`
    
-   Make a similar but distinct request, use a new value for the `request_id`
    

chat\_bubble

From Vault Core 5.0, `request IDs` may be purged when they are at least seven days old. A new request will be generated if a request ID is reused after the original has been purged. This does not apply to Configuration Resources.

Determining whether or not to retry a request should be based on the HTTP response code. For further information, see the Status codes section in the [Overview](/vault-core/5-9/EN/api/overview#overview).

## [](#pagination_guarantees "Copy link to heading")Pagination guarantees

### [](#overview_2 "Copy link to heading")Overview

In Vault Core, resources retrieved using a List endpoint are displayed using pagination defined by a page token that is included in subsequent API requests. If the resources that are being retrieved change while pagination is in progress, the resources displayed will depend on the pagination data consistency guarantee associated with the List endpoint used.

### [](#pagination_data_consistency_guarantee_levels_for_list_endpoints "Copy link to heading")Pagination data consistency guarantee levels for List endpoints

If the resources retrieved change during pagination and the List endpoint offers:

-   Best-effort consistency guarantee, responses may not contain all entries and/or may contain duplicate or inconsistent entries; do not use List endpoints of this level to calculate accurate aggregates via pagination.
    
-   Page-level consistency guarantee, responses may contain entries of varying ages. Pagination is more robust to concurrent data mutation, but it may be temporally inconsistent, as the requests are not pinned against the state of the system at a particular point in time; do not use List endpoints of this level to retrieve snapshots of the system for a given timestamp.
    
-   Snapshot consistency guarantee, responses will contain entries as of a given timestamp. Pagination is robust to concurrent data mutation and is temporally consistent, as the requests are pinned against the state of the system at a particular point in time; do not use List endpoints of this level to retrieve the most up-to-date view.
    

chat\_bubble

See the API documentation for each List endpoint to view its pagination data consistency guarantee type.

### [](#best_effort_consistency "Copy link to heading")Best-effort consistency

#### [](#duplicate_entry_example "Copy link to heading")Duplicate entry example

1.  Retrieve page N; the last resource displayed on page N is resource with ID X.
    
2.  A new resource, matching the List filters, is created.
    
3.  Retrieve page N+1; if the results are ordered by descending create timestamp, resource with ID X will also display on page N+1.
    

#### [](#missing_entry_example "Copy link to heading")Missing entry example

1.  Retrieve page N; the last resource displayed on page N is resource with ID X.
    
    chat\_bubble
    
    If page N+1 is retrieved at this time, the first resource on page N+1 has ID Y.
    
2.  Resource with ID X is updated and no longer matches the List filters.
    
3.  Retrieve page N+1; resource with ID Y will not display on page N+1.
    

### [](#page_level_consistency "Copy link to heading")Page-level consistency

#### [](#no_duplicate_entry_example "Copy link to heading")No duplicate entry example

1.  Retrieve page N; the last resource on page N is resource with ID X.
    
2.  A new resource with ID Y, matching the List filters, is created.
    
3.  Retrieve page N+1; resource with ID X will not display on page N+1.
    
    chat\_bubble
    
    If the List endpoint offers best-effort consistency guarantee, resource with ID X may display again on page N+1.
    

#### [](#no_missing_entry_example "Copy link to heading")No missing entry example

1.  Retrieve page N; the last resource displayed on page N is resource with ID X.
    
    chat\_bubble
    
    If page N+1 is retrieved at this time, the first resource on page N+1 has ID Y.
    
2.  Resource with ID X is updated and no longer matches the List filters.
    
3.  Retrieve page N+1; Resource with ID Y will display on page N+1.
    
    chat\_bubble
    
    If the List endpoint offers best-effort consistency guarantee, resource with ID Y may not display on page N+1.
    

#### [](#no_snapshot_view_example "Copy link to heading")No snapshot view example

1.  Retrieve page N at time t.
    
2.  A new resource with ID X, matching the List filters, is created at time t+1.
    
3.  Resource with ID X may or may not appear on later pages, depending on ordering. For example, if the results are ordered by:
    
    -   Descending create timestamp, resource with ID X would not appear on later pages as it is the most recently-created resource.
        
    -   Ascending create timestamp, resource with ID X appears on the last page.
        
    

chat\_bubble

Changes to the resources do not affect previously retrieved pages, which show the status of the system at time t, while following pages show the status of the system at time t+1.

### [](#snapshot_consistency "Copy link to heading")Snapshot consistency

#### [](#snapshot_view_example "Copy link to heading")Snapshot view example

1.  Retrieve page 1 at time t.
    
2.  A new resource with ID X, matching the List filters, is created at time t+1.
    
3.  Resource with ID X will not appear in later pages, as all pages are retrieved as they were at time t.
    

## [](#using_the_streaming_apis "Copy link to heading")Using the Streaming APIs

### [](#overview_3 "Copy link to heading")Overview

Vault Core uses a data streaming architecture across all components to enable near real-time data publishing. The Vault Core data streaming architecture provides the advantages of a modern, event-driven, Kafka-based data architecture:

-   Near real-time event sourcing through streaming
    
-   Guaranteed at least once delivery
    
-   Ability to scale to large volumes through Kafka
    
-   Full access to underlying Vault Core state changes
    
-   Subscribe as many consumers as is required without extra burden on the core
    
-   Granular access to an extensible data model
    

This data can have various uses. For example, to:

-   Improve customer loyalty through real-time tailored insights
    
-   Reduce risk and free up capital through continuous liquidity monitoring and management
    
-   Increase revenue through contextual, personalised product offerings
    
-   Enable real-time general ledger and reconciliation integrations
    

### [](#streaming_apis "Copy link to heading")Streaming APIs

Vault Core uses two types of API to enable interaction with the system and the data held within it:

-   RESTful APIs for synchronous interaction
    
-   Streaming APIs for asynchronous interaction
    

The Vault Core Platform streams two types of data, facts, and resource mutations, to represent the full state of the data of each component and published immediately after they are written to the database.

  
| Data type | Descriptions | Examples |
| --- | --- | --- |
| 
Facts

 | 

Facts are events that describe the creation of resources

 | 

Examples include:

-   Posting creation
    
-   Balance updates
    





 |
| 

Resource mutations

 | 

Resource mutations are events that describe updates to mutable resources happening during their lifecycle

 | 

Examples include:

-   Account updates
    
-   Contracts version updates
    
-   Payment Device updates
    
-   Parameter updates- Balance updates
    





 |

#### [](#data_is_available_from_all_components "Copy link to heading")Data is available from all components

Each component of Vault Core provides an outbound Streaming API that uses a push mechanism to provide data in near real-time for use in external systems. All Vault Core Platform components stream their state change in near real-time: Kernel, Payments Hub, Workflow Engine, and so on, allowing the state of each Vault Core component to be reflected in external systems.

#### [](#integration_via_kafka_topics "Copy link to heading")Integration via Kafka topics

The Streaming APIs are based on Apache Kafka, with each event type, such as a Posting or a balance update, streamed from a dedicated topic. Any number of external systems can subscribe to these topics to enable the use of Vault Core data in systems for use cases such as storage, data analysis, machine learning, reporting, and more.

#### [](#benefits_of_streaming_apis "Copy link to heading")Benefits of Streaming APIs

-   Operational efficiency: Removes the burden that is typically put on the operational resources of legacy cores and enables the ability to scale to large volumes of transactions. Removes the need for downtime or reduced operational processing by taking a 24/7, real-time data publishing approach.
    
-   Respond to change: Increases the bank’s responsiveness to business change by enabling real-time actions to be taken based on streamed events. Intra-day financial positions, real-time fraud detection, and obtaining up-to-date views on financial and operational risk can be achieved with real-time data.
    
-   Advanced analytics: Near real-time granular data enables advanced analytic capabilities to be adopted, such as machine learning, by enabling training of models in real time.
    
-   Ease of integration: Event data is product-agnostic, enabling changes to be made to a product’s underlying Smart Contract without need to alter the downstream integrations that receive these events. Similarly, integrations can be changed without intervening in product functionality.
    

#### [](#further_information "Copy link to heading")Further information

See the Streaming API section within each [API](/vault-core/5-9/EN/api/).

## [](#permission_scopes "Copy link to heading")Permission Scopes

By default, JSON Web Tokens (JWTs) used in API requests are authorised based on the API scopes within the JWT. The scopes are specified using the scope (`scp`) claim (this behaviour can be customised through the use of a custom OPA Policy created using the Core API).

The following tables provide lists of Scopes and the API endpoints they are associated with:

### [](#access_control_api "Copy link to heading")Access Control API

 
| Scope | Endpoints |
| --- | --- |
| 
access\_control.data\_permissions:read

 | 

GET /v1/data-permissions:batchGet  
GET /v1/data-permissions/\*  
GET /v1/data-permissions

 |
| 

access\_control.data\_permissions:write

 | 

POST /v1/data-permissions  
PUT /v1/data-permissions/\*  
DELETE /v1/data-permissions/\*

 |
| 

access\_control.role\_data\_permission\_assocs:create

 | 

POST /v1/role-data-permission-assocs

 |
| 

access\_control.role\_data\_permission\_assocs:read

 | 

GET /v1/role-data-permission-assocs  
GET /v1/role-data-permission-assocs/\*

 |
| 

access\_control.role\_data\_permission\_assocs:write

 | 

POST /v1/role-data-permission-assocs  
DELETE /v1/role-data-permission-assocs/\*

 |
| 

access\_control.role\_vault\_permission\_assocs:create

 | 

POST /v1/role-vault-permission-assocs

 |
| 

access\_control.role\_vault\_permission\_assocs:read

 | 

GET /v1/role-vault-permission-assocs  
GET /v1/role-vault-permission-assocs/\*

 |
| 

access\_control.role\_vault\_permission\_assocs:write

 | 

POST /v1/role-vault-permission-assocs  
DELETE /v1/role-vault-permission-assocs/\*

 |
| 

access\_control.roles:create

 | 

POST /v1/roles  
POST /v2/roles

 |
| 

access\_control.roles:read

 | 

GET /v1/roles  
GET /v1/roles:batchGet  
GET /v1/roles/\*  
GET /v2/roles  
GET /v2/roles:batchGet

 |
| 

access\_control.roles:update

 | 

PUT /v1/roles/\*  
PUT /v2/roles/\*

 |
| 

access\_control.roles:write

 | 

POST /v1/roles  
PUT /v1/roles/\*  
DELETE /v1/roles/\*  
POST /v2/roles  
PUT /v2/roles/\*

 |
| 

access\_control.vault\_permissions:read

 | 

GET /v1/vault-permissions  
GET /v1/vault-permissions:batchGet  
GET /v1/vault-permissions/\*

 |
| 

access\_control:read

 | 

GET /v1/data-permissions:batchGet  
GET /v1/data-permissions/\*  
GET /v1/data-permissions  
GET /v1/vault-permissions  
GET /v1/vault-permissions:batchGet  
GET /v1/vault-permissions/\*  
GET /v1/roles  
GET /v1/roles:batchGet  
GET /v1/roles/\*  
GET /v1/role-vault-permission-assocs  
GET /v1/role-vault-permission-assocs/\*  
GET /v1/role-data-permission-assocs  
GET /v1/role-data-permission-assocs/\*  
GET /v2/roles  
GET /v2/roles:batchGet

 |
| 

access\_control:write

 | 

POST /v1/data-permissions  
PUT /v1/data-permissions/\*  
DELETE /v1/data-permissions/\*  
POST /v1/roles  
PUT /v1/roles/\*  
DELETE /v1/roles/\*  
POST /v1/role-vault-permission-assocs  
DELETE /v1/role-vault-permission-assocs/\*  
POST /v1/role-data-permission-assocs  
DELETE /v1/role-data-permission-assocs/\*  
POST /v2/roles  
PUT /v2/roles/\*

 |

### [](#audit_api "Copy link to heading")Audit API

 
| Scope | Endpoints |
| --- | --- |
| 
audit.action\_logs:read

 | 

GET /v1/action-logs  
GET /v1/action-logs:batchGet  
GET /v1/action-logs/\*

 |
| 

audit.audit\_logs:read

 | 

GET /v1/audit-logs  
GET /v1/audit-logs:batchGet  
GET /v1/audit-logs/\*

 |
| 

audit:read

 | 

GET /v1/audit-logs  
GET /v1/audit-logs:batchGet  
GET /v1/audit-logs/\*  
GET /v1/action-logs  
GET /v1/action-logs:batchGet  
GET /v1/action-logs/\*

 |

### [](#core_api "Copy link to heading")Core API

 
| Scope | Endpoints |
| --- | --- |
| 
core.account\_attribute\_values:read

 | 

GET /v1/account-attribute-values

 |
| 

core.account\_migrations:create

 | 

POST /v2/account-migrations  
POST /v1/account-migrations

 |
| 

core.account\_migrations:read

 | 

GET /v2/account-migrations:batchGet  
GET /v2/account-migrations  
GET /v1/account-migrations:batchGet  
GET /v1/account-migrations

 |
| 

core.account\_migrations:write

 | 

POST /v2/account-migrations  
PUT /v2/account-migrations/\*  
POST /v1/account-migrations  
PUT /v1/account-migrations/\*

 |
| 

core.account\_plan\_assocs:read

 | 

GET /v1/account-plan-assocs:batchGet  
GET /v1/account-plan-assocs

 |
| 

core.account\_schedule\_assocs:read

 | 

GET /v1/account-schedule-assocs  
GET /v1/account-schedule-assocs/\*

 |
| 

core.account\_schedule\_tags:create

 | 

POST /v1/account-schedule-tags

 |
| 

core.account\_schedule\_tags:read

 | 

GET /v1/account-schedule-tags  
GET /v1/account-schedule-tags:batchGet

 |
| 

core.account\_schedule\_tags:update

 | 

PUT /v1/account-schedule-tags/\*

 |
| 

core.account\_schedule\_tags:write

 | 

POST /v1/account-schedule-tags  
PUT /v1/account-schedule-tags/\*

 |
| 

core.account\_update\_batches:create

 | 

POST /v1/account-update-batches

 |
| 

core.account\_update\_batches:read

 | 

GET /v1/account-update-batches:batchGet  
GET /v1/account-update-batches

 |
| 

core.account\_update\_batches:write

 | 

POST /v1/account-update-batches

 |
| 

core.account\_updates:create

 | 

POST /v1/account-updates

 |
| 

core.account\_updates:read

 | 

GET /v1/account-updates/\*  
GET /v1/account-updates:batchGet  
GET /v1/account-updates

 |
| 

core.account\_updates:write

 | 

POST /v1/account-updates

 |
| 

core.accounts:create

 | 

POST /v2/accounts  
POST /v1/accounts

 |
| 

core.accounts:read

 | 

GET /v2/accounts:batchGet  
GET /v2/accounts  
GET /v1/accounts  
GET /v1/accounts/\*  
GET /v1/accounts/\*:paramTimeseries

 |
| 

core.accounts:update

 | 

PUT /v2/accounts/\*  
PUT /v1/accounts/\*  
PUT /v1/accounts/\*:updateDetails

 |
| 

core.accounts:write

 | 

POST /v2/accounts  
PUT /v2/accounts/\*  
POST /v1/accounts  
PUT /v1/accounts/\*  
PUT /v1/accounts/\*:updateDetails

 |
| 

core.adjustments:read

 | 

GET /v1/adjustments:batchGet  
GET /v1/adjustments

 |
| 

core.adjustments:write

 | 

POST /v1/adjustments:bulkRetry

 |
| 

core.balances:read

 | 

GET /v2/balances/live  
GET /v2/balances/end  
GET /v2/balances/series  
GET /v1/balances/live  
GET /v1/balances/timerange

 |
| 

core.bookkeeping\_dates:read

 | 

GET /v1/calendar/bookkeeping-date/\*

 |
| 

core.bookkeeping\_dates:update

 | 

PUT /v1/calendar/bookkeeping-date/\*

 |
| 

core.bookkeeping\_dates:write

 | 

PUT /v1/calendar/bookkeeping-date/\*

 |
| 

core.calendar\_events:create

 | 

POST /v1/calendar-event

 |
| 

core.calendar\_events:read

 | 

GET /v1/calendar-event/\*  
GET /v1/calendar-event:batchGet  
GET /v1/calendar-event

 |
| 

core.calendar\_events:update

 | 

PUT /v1/calendar-event/\*:updateDetails

 |
| 

core.calendar\_events:write

 | 

POST /v1/calendar-event  
PUT /v1/calendar-event/\*:updateDetails

 |
| 

core.calendar\_period\_descriptors:create

 | 

POST /v1/calendar-period-descriptor

 |
| 

core.calendar\_period\_descriptors:write

 | 

POST /v1/calendar-period-descriptor

 |
| 

core.calendar\_periods:read

 | 

GET /v1/calendar/\*:calculatePeriod

 |
| 

core.calendar\_periods:write

 | 

PUT /v1/calendar/\*/period/current:change

 |
| 

core.calendars:create

 | 

POST /v1/calendar

 |
| 

core.calendars:read

 | 

GET /v1/calendar/\*  
GET /v1/calendars

 |
| 

core.calendars:update

 | 

PUT /v1/calendar/\*:updateDetails

 |
| 

core.calendars:write

 | 

POST /v1/calendar  
PUT /v1/calendar/\*:updateDetails

 |
| 

core.contract\_events:read

 | 

GET /v1/contract-executions

 |
| 

core.contract\_module\_versions:create

 | 

POST /v1/contract-module-versions

 |
| 

core.contract\_module\_versions:read

 | 

GET /v1/contract-module-versions  
GET /v1/contract-module-versions:batchGet

 |
| 

core.contract\_module\_versions:write

 | 

POST /v1/contract-module-versions

 |
| 

core.contract\_modules:create

 | 

POST /v1/contract-modules

 |
| 

core.contract\_modules:read

 | 

GET /v1/contract-modules  
GET /v1/contract-modules:batchGet

 |
| 

core.contract\_modules:write

 | 

POST /v1/contract-modules

 |
| 

core.contracts:execute

 | 

POST /v1/contracts:simulate

 |
| 

core.create\_posting\_instruction\_batch:execute

 | 

POST /v1/create-posting-instruction-batch:validate

 |
| 

core.customer\_addresses:create

 | 

POST /v1/customer-addresses

 |
| 

core.customer\_addresses:read

 | 

GET /v1/customer-addresses

 |
| 

core.customer\_addresses:update

 | 

PUT /v1/customer-addresses/\*

 |
| 

core.customer\_addresses:write

 | 

POST /v1/customer-addresses  
PUT /v1/customer-addresses/\*

 |
| 

core.customers:create

 | 

POST /v1/customers

 |
| 

core.customers:read

 | 

GET /v1/customers/\*  
GET /v1/customers:batchGet  
GET /v1/customers  
POST /v1/customers:search

 |
| 

core.customers:update

 | 

PUT /v1/customers/\*  
PUT /v1/customers/\*:updateAdditionalDetails

 |
| 

core.customers:write

 | 

POST /v1/customers  
PUT /v1/customers/\*  
PUT /v1/customers/\*:updateAdditionalDetails

 |
| 

core.derived\_parameter\_values:read

 | 

GET /v1/derived-parameter-values

 |
| 

core.dlq\_messages:execute

 | 

POST /v1/dlq-messages:batchRepublish

 |
| 

core.dlq\_messages:read

 | 

GET /v1/dlq-messages:batchGet  
GET /v1/dlq-messages

 |
| 

core.flag\_definitions:create

 | 

POST /v1/flag-definitions

 |
| 

core.flag\_definitions:read

 | 

GET /v1/flag-definitions  
GET /v1/flag-definitions:batchGet

 |
| 

core.flag\_definitions:update

 | 

PUT /v1/flag-definitions/\*

 |
| 

core.flag\_definitions:write

 | 

POST /v1/flag-definitions  
PUT /v1/flag-definitions/\*

 |
| 

core.flags:create

 | 

POST /v1/flags

 |
| 

core.flags:read

 | 

GET /v1/flags  
GET /v1/flags:batchGet

 |
| 

core.flags:update

 | 

PUT /v1/flags/\*

 |
| 

core.flags:write

 | 

POST /v1/flags  
PUT /v1/flags/\*

 |
| 

core.global\_parameter\_values:create

 | 

POST /v1/global-parameter-values

 |
| 

core.global\_parameter\_values:read

 | 

GET /v1/global-parameter-values

 |
| 

core.global\_parameter\_values:write

 | 

POST /v1/global-parameter-values

 |
| 

core.global\_parameters:create

 | 

POST /v1/global-parameters

 |
| 

core.global\_parameters:read

 | 

GET /v1/global-parameters:batchGet  
GET /v1/global-parameters/\*  
GET /v1/global-parameters

 |
| 

core.global\_parameters:write

 | 

POST /v1/global-parameters

 |
| 

core.internal\_accounts:create

 | 

POST /v2/accounts  
POST /v1/internal-accounts

 |
| 

core.internal\_accounts:read

 | 

GET /v2/accounts:batchGet  
GET /v2/accounts  
GET /v1/internal-accounts  
GET /v1/internal-accounts/\*  
GET /v1/internal-accounts:batchGet

 |
| 

core.internal\_accounts:update

 | 

PUT /v2/accounts/\*

 |
| 

core.internal\_accounts:write

 | 

POST /v2/accounts  
PUT /v2/accounts/\*  
POST /v1/internal-accounts

 |
| 

core.jobs:execute

 | 

POST /v1/jobs/\*:republish  
POST /v1/jobs:batchRepublish

 |
| 

core.jobs:read

 | 

GET /v1/jobs  
GET /v1/jobs:batchGet

 |
| 

core.journal\_events:execute

 | 

POST /v1/journal-events:replay

 |
| 

core.journal\_events:read

 | 

GET /v1/journal-events:checksum  
GET /v1/journal-events

 |
| 

core.ledger\_balances:read

 | 

GET /v1/ledger-balances  
GET /v1/ledger-balances/\*

 |
| 

core.parameter\_value\_hierarchy\_nodes:create

 | 

POST /v1/parameter-value-hierarchy-nodes

 |
| 

core.parameter\_value\_hierarchy\_nodes:read

 | 

GET /v1/parameter-value-hierarchy-nodes:batchGet  
GET /v1/parameter-value-hierarchy-nodes

 |
| 

core.parameter\_value\_hierarchy\_nodes:update

 | 

PUT /v1/parameter-value-hierarchy-nodes/\*

 |
| 

core.parameter\_value\_hierarchy\_nodes:write

 | 

POST /v1/parameter-value-hierarchy-nodes  
PUT /v1/parameter-value-hierarchy-nodes/\*

 |
| 

core.parameter\_values:create

 | 

POST /v1/parameter-values

 |
| 

core.parameter\_values:read

 | 

GET /v1/parameter-values:batchGet  
GET /v1/parameter-values  
GET /v1/parameter-values:viewEffective

 |
| 

core.parameter\_values:update

 | 

PUT /v1/parameter-values/\*

 |
| 

core.parameter\_values:write

 | 

POST /v1/parameter-values  
POST /v1/parameter-values:batchCreate  
PUT /v1/parameter-values/\*

 |
| 

core.parameters:create

 | 

POST /v1/parameters

 |
| 

core.parameters:read

 | 

GET /v1/parameters:batchGet  
GET /v1/parameters

 |
| 

core.parameters:write

 | 

POST /v1/parameters

 |
| 

core.payment\_device\_links:create

 | 

POST /v1/payment-device-links

 |
| 

core.payment\_device\_links:read

 | 

GET /v1/payment-device-links  
POST /v1/payment-device-links:search  
GET /v1/payment-device-links:batchGet

 |
| 

core.payment\_device\_links:update

 | 

PUT /v1/payment-device-links/\*

 |
| 

core.payment\_device\_links:write

 | 

POST /v1/payment-device-links  
PUT /v1/payment-device-links/\*

 |
| 

core.payment\_devices:create

 | 

POST /v1/payment-devices

 |
| 

core.payment\_devices:read

 | 

GET /v1/payment-devices:batchGet

 |
| 

core.payment\_devices:update

 | 

PUT /v1/payment-devices/\*

 |
| 

core.payment\_devices:write

 | 

POST /v1/payment-devices  
PUT /v1/payment-devices/\*

 |
| 

core.plan\_migrations:create

 | 

POST /v1/plan-migrations

 |
| 

core.plan\_migrations:read

 | 

GET /v1/plan-migrations:batchGet  
GET /v1/plan-migrations

 |
| 

core.plan\_migrations:write

 | 

POST /v1/plan-migrations

 |
| 

core.plan\_schedules:read

 | 

GET /v1/plan-schedules

 |
| 

core.plan\_updates:create

 | 

POST /v1/plan-updates

 |
| 

core.plan\_updates:read

 | 

GET /v1/plan-updates:batchGet  
GET /v1/plan-updates

 |
| 

core.plan\_updates:write

 | 

POST /v1/plan-updates

 |
| 

core.plans:create

 | 

POST /v1/plans

 |
| 

core.plans:read

 | 

GET /v1/plans:batchGet

 |
| 

core.plans:write

 | 

POST /v1/plans

 |
| 

core.policies:create

 | 

POST /v1/policies

 |
| 

core.policies:read

 | 

GET /v1/policies/\*  
GET /v1/policies:batchGet  
GET /v1/policies

 |
| 

core.policies:update

 | 

PUT /v1/policies/\*

 |
| 

core.policies:write

 | 

POST /v1/policies  
PUT /v1/policies/\*

 |
| 

core.post\_posting\_failures:read

 | 

GET /v1/post-posting-failures  
GET /v1/post-posting-failures:batchGet

 |
| 

core.post\_posting\_failures:write

 | 

POST /v1/post-posting-failures:republish  
DELETE /v1/post-posting-failures/\*

 |
| 

core.posting\_instruction\_batches:create

 | 

POST /v1/posting-instruction-batches  
POST /v1/posting-instruction-batches:asyncCreate

 |
| 

core.posting\_instruction\_batches:read

 | 

GET /v1/posting-instruction-batches/\*  
GET /v1/posting-instruction-batches/async-operations:batchGet  
GET /v1/posting-instruction-batches  
GET /v1/posting-instruction-batches:batchGet

 |
| 

core.posting\_instruction\_batches:write

 | 

POST /v1/posting-instruction-batches  
POST /v1/posting-instruction-batches:asyncCreate

 |
| 

core.postings\_api\_clients:create

 | 

POST /v1/postings-api-clients

 |
| 

core.postings\_api\_clients:read

 | 

GET /v1/postings-api-clients/\*  
GET /v1/postings-api-clients:batchGet  
GET /v1/postings-api-clients

 |
| 

core.postings\_api\_clients:update

 | 

PUT /v1/postings-api-clients/\*

 |
| 

core.postings\_api\_clients:write

 | 

POST /v1/postings-api-clients  
PUT /v1/postings-api-clients/\*

 |
| 

core.processing\_groups:create

 | 

POST /v1/processing-groups

 |
| 

core.processing\_groups:read

 | 

GET /v1/processing-groups/\*  
GET /v1/processing-groups

 |
| 

core.processing\_groups:update

 | 

PUT /v1/processing-groups/\*

 |
| 

core.processing\_groups:write

 | 

POST /v1/processing-groups  
PUT /v1/processing-groups/\*

 |
| 

core.product\_versions:create

 | 

POST /v1/product-versions

 |
| 

core.product\_versions:read

 | 

GET /v1/product-versions  
GET /v1/product-versions:batchGet  
GET /v1/product-versions/\*:paramTimeseries

 |
| 

core.product\_versions:update

 | 

POST /v1/product-versions:batchUpdate  
PUT /v1/product-versions/\*:updateParams

 |
| 

core.product\_versions:write

 | 

POST /v1/product-versions  
POST /v1/product-versions:batchUpdate  
PUT /v1/product-versions/\*:updateParams

 |
| 

core.products:read

 | 

GET /v1/products  
GET /v1/products:batchGet

 |
| 

core.restriction\_set\_definition\_versions:create

 | 

POST /v1/restriction-set-definition-versions  
POST /v1/restriction-set-definition/\*/versions

 |
| 

core.restriction\_set\_definition\_versions:read

 | 

GET /v1/restriction-set-definition-versions  
GET /v1/restriction-set-definition/\*/versions  
GET /v1/restriction-set-definition-versions:batchGet

 |
| 

core.restriction\_set\_definition\_versions:write

 | 

POST /v1/restriction-set-definition-versions  
POST /v1/restriction-set-definition/\*/versions

 |
| 

core.restriction\_set\_definitions:read

 | 

GET /v1/restriction-set-definitions

 |
| 

core.restriction\_sets:create

 | 

POST /v1/restriction-sets

 |
| 

core.restriction\_sets:read

 | 

GET /v1/restriction-sets:batchGet  
GET /v1/restriction-sets

 |
| 

core.restriction\_sets:update

 | 

PUT /v1/restriction-sets/\*

 |
| 

core.restriction\_sets:write

 | 

POST /v1/restriction-sets  
PUT /v1/restriction-sets/\*

 |
| 

core.restrictions:read

 | 

GET /v1/restrictions

 |
| 

core.schedule\_tags:create

 | 

POST /v1/schedule-tags

 |
| 

core.schedule\_tags:write

 | 

POST /v1/schedule-tags

 |
| 

core.schedules:read

 | 

GET /v1/schedules  
GET /v1/schedules:batchGet

 |
| 

core.service\_accounts:create

 | 

POST /v1/service-accounts

 |
| 

core.service\_accounts:read

 | 

GET /v1/service-accounts  
GET /v1/service-accounts/\*  
GET /v1/service-accounts:batchGet

 |
| 

core.service\_accounts:update

 | 

PUT /v1/service-accounts/\*  
PUT /v1/service-accounts/\*:updatePermissions

 |
| 

core.service\_accounts:write

 | 

POST /v1/service-accounts  
PUT /v1/service-accounts/\*  
PUT /v1/service-accounts/\*:updatePermissions

 |
| 

core.smart\_contract\_module\_versions\_links:create

 | 

POST /v1/smart-contract-module-versions-links

 |
| 

core.smart\_contract\_module\_versions\_links:read

 | 

GET /v1/smart-contract-module-versions-links  
GET /v1/smart-contract-module-versions-links:batchGet

 |
| 

core.smart\_contract\_module\_versions\_links:write

 | 

POST /v1/smart-contract-module-versions-links

 |
| 

core.supervisor\_contract\_versions:read

 | 

GET /v1/supervisor-contract-versions  
GET /v1/supervisor-contract-versions:batchGet

 |
| 

core.supervisor\_contract\_versions:write

 | 

POST /v1/supervisor-contract-versions

 |
| 

core.supervisor\_contracts:create

 | 

POST /v1/supervisor-contracts

 |
| 

core.supervisor\_contracts:read

 | 

GET /v1/supervisor-contracts  
GET /v1/supervisor-contracts:batchGet

 |
| 

core.supervisor\_contracts:write

 | 

POST /v1/supervisor-contracts

 |
| 

core.usage\_measurements:read

 | 

GET /v1/usage-measurements

 |
| 

core.vault\_jobs:execute

 | 

POST /v1/vault-jobs-operations:bulkRetry

 |
| 

core.vault\_jobs:read

 | 

GET /v1/vault-jobs/\*  
GET /v1/vault-jobs:batchGet  
GET /v1/vault-jobs  
GET /v1/vault-jobs-operations

 |
| 

core.vault\_versions:read

 | 

GET /v1/vault-version

 |
| 

core:execute

 | 

POST /v1/vault-jobs-operations:bulkRetry  
POST /v1/create-posting-instruction-batch:validate  
POST /v1/dlq-messages:batchRepublish  
POST /v1/contracts:simulate  
POST /v1/jobs/\*:republish  
POST /v1/jobs:batchRepublish  
POST /v1/journal-events:replay

 |
| 

core:read

 | 

GET /v1/adjustments:batchGet  
GET /v1/adjustments  
GET /v1/customers/\*  
GET /v1/customers:batchGet  
GET /v1/customers  
POST /v1/customers:search  
GET /v1/customer-addresses  
GET /v1/products  
GET /v1/products:batchGet  
GET /v1/product-versions  
GET /v1/product-versions:batchGet  
GET /v1/product-versions/\*:paramTimeseries  
GET /v1/usage-measurements  
GET /v1/ledger-balances  
GET /v1/ledger-balances/\*  
GET /v2/balances/live  
GET /v2/balances/end  
GET /v2/balances/series  
GET /v1/parameter-value-hierarchy-nodes:batchGet  
GET /v1/parameter-value-hierarchy-nodes  
GET /v1/parameters:batchGet  
GET /v1/parameters  
GET /v1/parameter-values:batchGet  
GET /v1/parameter-values  
GET /v1/parameter-values:viewEffective  
GET /v1/contract-modules  
GET /v1/contract-modules:batchGet  
GET /v1/contract-module-versions  
GET /v1/contract-module-versions:batchGet  
GET /v1/smart-contract-module-versions-links  
GET /v1/smart-contract-module-versions-links:batchGet  
GET /v1/derived-parameter-values  
GET /v1/supervisor-contracts  
GET /v1/supervisor-contracts:batchGet  
GET /v1/supervisor-contract-versions  
GET /v1/supervisor-contract-versions:batchGet  
GET /v1/vault-jobs/\*  
GET /v1/vault-jobs:batchGet  
GET /v1/vault-jobs  
GET /v1/vault-jobs-operations  
GET /v1/balances/live  
GET /v1/balances/timerange  
GET /v1/global-parameters:batchGet  
GET /v1/global-parameters/\*  
GET /v1/global-parameters  
GET /v1/global-parameter-values  
GET /v1/posting-instruction-batches/\*  
GET /v1/posting-instruction-batches/async-operations:batchGet  
GET /v1/posting-instruction-batches  
GET /v1/posting-instruction-batches:batchGet  
GET /v1/dlq-messages:batchGet  
GET /v1/dlq-messages  
GET /v1/payment-devices:batchGet  
GET /v1/payment-device-links  
POST /v1/payment-device-links:search  
GET /v1/payment-device-links:batchGet  
GET /v2/accounts:batchGet  
GET /v2/accounts  
GET /v2/account-migrations:batchGet  
GET /v2/account-migrations  
GET /v1/policies/\*  
GET /v1/policies:batchGet  
GET /v1/policies  
GET /v1/service-accounts  
GET /v1/service-accounts/\*  
GET /v1/service-accounts:batchGet  
GET /v1/calendar/\*  
GET /v1/calendar/\*:calculatePeriod  
GET /v1/calendar-event/\*  
GET /v1/calendar-event:batchGet  
GET /v1/calendar-event  
GET /v1/calendars  
GET /v1/calendar/bookkeeping-date/\*  
GET /v1/processing-groups/\*  
GET /v1/processing-groups  
GET /v1/plans:batchGet  
GET /v1/account-plan-assocs:batchGet  
GET /v1/account-plan-assocs  
GET /v1/plan-updates:batchGet  
GET /v1/plan-updates  
GET /v1/plan-schedules  
GET /v1/plan-migrations:batchGet  
GET /v1/plan-migrations  
GET /v1/post-posting-failures  
GET /v1/post-posting-failures:batchGet  
GET /v1/flag-definitions  
GET /v1/flag-definitions:batchGet  
GET /v1/flags  
GET /v1/flags:batchGet  
GET /v1/restriction-set-definition-versions  
GET /v1/restriction-set-definition/\*/versions  
GET /v1/restriction-set-definition-versions:batchGet  
GET /v1/restriction-set-definitions  
GET /v1/restriction-sets:batchGet  
GET /v1/restriction-sets  
GET /v1/restrictions  
GET /v1/schedules  
GET /v1/schedules:batchGet  
GET /v1/jobs  
GET /v1/jobs:batchGet  
GET /v1/account-schedule-tags  
GET /v1/account-schedule-tags:batchGet  
GET /v1/account-attribute-values  
GET /v1/contract-executions  
GET /v1/accounts  
GET /v1/accounts/\*  
GET /v1/account-updates/\*  
GET /v1/account-updates:batchGet  
GET /v1/account-updates  
GET /v1/account-update-batches:batchGet  
GET /v1/account-update-batches  
GET /v1/account-migrations:batchGet  
GET /v1/account-migrations  
GET /v1/accounts/\*:paramTimeseries  
GET /v1/account-schedule-assocs  
GET /v1/account-schedule-assocs/\*  
GET /v1/internal-accounts  
GET /v1/internal-accounts/\*  
GET /v1/internal-accounts:batchGet  
GET /v1/journal-events:checksum  
GET /v1/journal-events  
GET /v1/postings-api-clients/\*  
GET /v1/postings-api-clients:batchGet  
GET /v1/postings-api-clients  
GET /v1/vault-version

 |
| 

core:write

 | 

POST /v1/adjustments:bulkRetry  
POST /v1/customers  
PUT /v1/customers/\*  
PUT /v1/customers/\*:updateAdditionalDetails  
POST /v1/customer-addresses  
PUT /v1/customer-addresses/\*  
POST /v1/product-versions  
POST /v1/product-versions:batchUpdate  
PUT /v1/product-versions/\*:updateParams  
POST /v1/parameter-value-hierarchy-nodes  
PUT /v1/parameter-value-hierarchy-nodes/\*  
POST /v1/parameters  
POST /v1/parameter-values  
POST /v1/parameter-values:batchCreate  
PUT /v1/parameter-values/\*  
POST /v1/contract-modules  
POST /v1/contract-module-versions  
POST /v1/smart-contract-module-versions-links  
POST /v1/supervisor-contracts  
POST /v1/supervisor-contract-versions  
POST /v1/global-parameters  
POST /v1/global-parameter-values  
POST /v1/posting-instruction-batches  
POST /v1/posting-instruction-batches:asyncCreate  
POST /v1/payment-devices  
PUT /v1/payment-devices/\*  
POST /v1/payment-device-links  
PUT /v1/payment-device-links/\*  
POST /v2/accounts  
PUT /v2/accounts/\*  
POST /v2/account-migrations  
PUT /v2/account-migrations/\*  
POST /v1/policies  
PUT /v1/policies/\*  
POST /v1/service-accounts  
PUT /v1/service-accounts/\*  
PUT /v1/service-accounts/\*:updatePermissions  
POST /v1/calendar  
POST /v1/calendar-event  
POST /v1/calendar-period-descriptor  
PUT /v1/calendar/\*/period/current:change  
PUT /v1/calendar-event/\*:updateDetails  
PUT /v1/calendar/\*:updateDetails  
PUT /v1/calendar/bookkeeping-date/\*  
POST /v1/processing-groups  
PUT /v1/processing-groups/\*  
POST /v1/plans  
POST /v1/plan-updates  
POST /v1/plan-migrations  
POST /v1/post-posting-failures:republish  
DELETE /v1/post-posting-failures/\*  
POST /v1/flag-definitions  
PUT /v1/flag-definitions/\*  
POST /v1/flags  
PUT /v1/flags/\*  
POST /v1/restriction-set-definition-versions  
POST /v1/restriction-set-definition/\*/versions  
POST /v1/restriction-sets  
PUT /v1/restriction-sets/\*  
POST /v1/schedule-tags  
POST /v1/account-schedule-tags  
PUT /v1/account-schedule-tags/\*  
POST /v1/accounts  
PUT /v1/accounts/\*  
POST /v1/account-updates  
POST /v1/account-update-batches  
POST /v1/account-migrations  
PUT /v1/account-migrations/\*  
PUT /v1/accounts/\*:updateDetails  
POST /v1/internal-accounts  
POST /v1/postings-api-clients  
PUT /v1/postings-api-clients/\*

 |

### [](#data_loader_api "Copy link to heading")Data Loader API

 
| Scope | Endpoints |
| --- | --- |
| 
data\_loader.dependency\_groups:read

 | 

GET /v1/dependency-groups  
GET /v1/dependency-groups:batchGet

 |
| 

data\_loader.resource\_batches:read

 | 

GET /v1/resource-batches/\*  
GET /v1/resource-batches  
GET /v1/resource-batches:batchGet

 |
| 

data\_loader.resources:read

 | 

GET /v1/resources/\*  
GET /v1/resources

 |
| 

data\_loader:read

 | 

GET /v1/resource-batches/\*  
GET /v1/resource-batches  
GET /v1/resources/\*  
GET /v1/resources  
GET /v1/resource-batches:batchGet  
GET /v1/dependency-groups  
GET /v1/dependency-groups:batchGet

 |

### [](#experience_layer_api "Copy link to heading")Experience Layer API

 
| Scope | Endpoints |
| --- | --- |
| 
xpl.payees:create

 | 

POST /v1/payees

 |
| 

xpl.payees:read

 | 

GET /v1/payees  
GET /v1/payees:batchGet

 |
| 

xpl.payees:update

 | 

PUT /v1/payees/\*

 |
| 

xpl.payees:write

 | 

POST /v1/payees  
PUT /v1/payees/\*  
DELETE /v1/payees/\*

 |
| 

xpl.transactions:create

 | 

POST /v1/transactions

 |
| 

xpl.transactions:read

 | 

GET /v1/transactions  
GET /v1/transactions:batchGet

 |
| 

xpl.transactions:update

 | 

PUT /v1/transactions/\*

 |
| 

xpl.transactions:write

 | 

POST /v1/transactions  
PUT /v1/transactions/\*

 |
| 

xpl:read

 | 

GET /v1/payees  
GET /v1/payees:batchGet  
GET /v1/transactions  
GET /v1/transactions:batchGet

 |
| 

xpl:write

 | 

POST /v1/payees  
PUT /v1/payees/\*  
DELETE /v1/payees/\*  
POST /v1/transactions  
PUT /v1/transactions/\*

 |

### [](#payments_hub_api "Copy link to heading")Payments Hub API

 
| Scope | Endpoints |
| --- | --- |
| 
payments\_hub.bank\_accounts:create

 | 

POST /v1/bank-accounts

 |
| 

payments\_hub.bank\_accounts:read

 | 

GET /v1/bank-accounts/\*  
GET /v1/bank-accounts:batchGet  
GET /v1/bank-accounts

 |
| 

payments\_hub.bank\_accounts:update

 | 

PUT /v1/bank-accounts/\*

 |
| 

payments\_hub.bank\_accounts:write

 | 

POST /v1/bank-accounts  
PUT /v1/bank-accounts/\*

 |
| 

payments\_hub.bbans:read

 | 

POST /v1/uk/bbans:validate  
GET /v1/uk/bbans/\*  
GET /v1/uk/bbans:batchGet  
GET /v1/uk/bbans

 |
| 

payments\_hub.bbans:write

 | 

POST /v1/uk/bbans

 |
| 

payments\_hub.calendar\_operation\_configs:create

 | 

POST /v1/calendar-operation-configs

 |
| 

payments\_hub.calendar\_operation\_configs:read

 | 

GET /v1/calendar-operation-configs/\*  
GET /v1/calendar-operation-configs:batchGet  
GET /v1/calendar-operation-configs

 |
| 

payments\_hub.calendar\_operation\_configs:write

 | 

POST /v1/calendar-operation-configs

 |
| 

payments\_hub.file\_versions:create

 | 

POST /v1/file-versions

 |
| 

payments\_hub.file\_versions:read

 | 

GET /v1/file-versions/\*  
GET /v1/file-versions:batchGet  
GET /v1/file-versions

 |
| 

payments\_hub.file\_versions:update

 | 

PUT /v1/file-versions/\*

 |
| 

payments\_hub.file\_versions:write

 | 

POST /v1/file-versions  
PUT /v1/file-versions/\*

 |
| 

payments\_hub.files:create

 | 

POST /v1/files

 |
| 

payments\_hub.files:read

 | 

GET /v1/files/\*  
GET /v1/files:batchGet  
GET /v1/files

 |
| 

payments\_hub.files:update

 | 

PUT /v1/files/\*

 |
| 

payments\_hub.files:write

 | 

POST /v1/files  
PUT /v1/files/\*

 |
| 

payments\_hub.ibans:read

 | 

POST /v1/ibans:validate  
GET /v1/uk/ibans/\*  
GET /v1/uk/ibans:batchGet  
GET /v1/uk/ibans

 |
| 

payments\_hub.ibans:write

 | 

POST /v1/uk/ibans

 |
| 

payments\_hub.payment\_actions:read

 | 

GET /v1/payment-actions/\*  
GET /v1/payment-actions:batchGet  
GET /v1/payment-actions

 |
| 

payments\_hub.payment\_actions:update

 | 

PUT /v1/payment-actions/\*

 |
| 

payments\_hub.payment\_actions:write

 | 

PUT /v1/payment-actions/\*

 |
| 

payments\_hub.payment\_reversals:create

 | 

POST /v1/payment-reversals

 |
| 

payments\_hub.payment\_reversals:read

 | 

GET /v1/payment-reversals/\*  
GET /v1/payment-reversals:batchGet  
GET /v1/payment-reversals

 |
| 

payments\_hub.payment\_reversals:write

 | 

POST /v1/payment-reversals

 |
| 

payments\_hub.payments:create

 | 

POST /v1/payments

 |
| 

payments\_hub.payments:read

 | 

GET /v1/payments:batchGet  
GET /v1/payments

 |
| 

payments\_hub.payments:update

 | 

PUT /v1/payments/\*  
POST /v1/payments/\*:initiate

 |
| 

payments\_hub.payments:write

 | 

POST /v1/payments  
PUT /v1/payments/\*  
POST /v1/payments/\*:initiate

 |
| 

payments\_hub.scheme\_configs:create

 | 

POST /v1/scheme-configs

 |
| 

payments\_hub.scheme\_configs:read

 | 

GET /v1/scheme-configs/\*  
GET /v1/scheme-configs:batchGet  
GET /v1/scheme-configs

 |
| 

payments\_hub.scheme\_configs:write

 | 

POST /v1/scheme-configs

 |
| 

payments\_hub.scheme\_messages:create

 | 

POST /v1/scheme-messages

 |
| 

payments\_hub.scheme\_messages:read

 | 

GET /v1/scheme-messages:batchGet  
GET /v1/scheme-messages

 |
| 

payments\_hub.scheme\_messages:write

 | 

POST /v1/scheme-messages

 |
| 

payments\_hub.schemes:create

 | 

POST /v1/schemes

 |
| 

payments\_hub.schemes:read

 | 

GET /v1/schemes/\*  
GET /v1/schemes:batchGet  
GET /v1/schemes

 |
| 

payments\_hub.schemes:update

 | 

PUT /v1/schemes/\*

 |
| 

payments\_hub.schemes:write

 | 

POST /v1/schemes  
PUT /v1/schemes/\*

 |
| 

payments\_hub:read

 | 

GET /v1/payment-actions/\*  
GET /v1/payment-actions:batchGet  
GET /v1/payment-actions  
GET /v1/files/\*  
GET /v1/files:batchGet  
GET /v1/files  
GET /v1/file-versions/\*  
GET /v1/file-versions:batchGet  
GET /v1/file-versions  
GET /v1/payments:batchGet  
GET /v1/payments  
GET /v1/scheme-messages:batchGet  
GET /v1/scheme-messages  
GET /v1/payment-reversals/\*  
GET /v1/payment-reversals:batchGet  
GET /v1/payment-reversals  
GET /v1/schemes/\*  
GET /v1/schemes:batchGet  
GET /v1/schemes  
GET /v1/scheme-configs/\*  
GET /v1/scheme-configs:batchGet  
GET /v1/scheme-configs  
GET /v1/calendar-operation-configs/\*  
GET /v1/calendar-operation-configs:batchGet  
GET /v1/calendar-operation-configs  
POST /v1/uk/bbans:validate  
GET /v1/uk/bbans/\*  
GET /v1/uk/bbans:batchGet  
GET /v1/uk/bbans  
POST /v1/ibans:validate  
GET /v1/uk/ibans/\*  
GET /v1/uk/ibans:batchGet  
GET /v1/uk/ibans  
GET /v1/bank-accounts/\*  
GET /v1/bank-accounts:batchGet  
GET /v1/bank-accounts

 |
| 

payments\_hub:write

 | 

PUT /v1/payment-actions/\*  
POST /v1/files  
PUT /v1/files/\*  
POST /v1/file-versions  
PUT /v1/file-versions/\*  
POST /v1/payments  
PUT /v1/payments/\*  
POST /v1/payments/\*:initiate  
POST /v1/scheme-messages  
POST /v1/payment-reversals  
POST /v1/schemes  
PUT /v1/schemes/\*  
POST /v1/scheme-configs  
POST /v1/calendar-operation-configs  
POST /v1/uk/bbans  
POST /v1/uk/ibans  
POST /v1/bank-accounts  
PUT /v1/bank-accounts/\*

 |

* * *

[1](#_footnoteref_1). The Workflows API is deprecated as of Vault Core release 4.6, and will be removed no earlier than release 7.0.

[2](#_footnoteref_2). The Experience Layer API is deprecated as of Vault Core release 4.7, and will be removed no earlier than release 6.0.

[3](#_footnoteref_3). There is also a Kafka-based asynchronous Postings API, useful for sending low-priority Postings. For more information, see the [Postings API documentation](/vault-core/5-9/EN/api/postings_api).